clusters/default/infra/apps/lldap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lldap
  labels:
    app.kubernetes.io/name: lldap
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
    tier: security
