clusters/default/infra/apps/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: lldap
  labels:
    app.kubernetes.io/name: lldap
    app.kubernetes.io/instance: lldap-prod
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lldap
        app.kubernetes.io/instance: lldap-prod
        app.kubernetes.io/part-of: kudofools
        app.kubernetes.io/managed-by: flux
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: lldap
          image: lldap/lldap:v0.6.3-alpine-rootless
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 3890
              name: ldap
            - containerPort: 17170
              name: http
          livenessProbe:
            tcpSocket:
              port: 3890
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 3890
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: "1"
              memory: 256Mi
            requests:
              cpu: 25m
              memory: 64Mi
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lldap-data-pvc
        - name: tmp
          emptyDir: {}
