clusters/default/infra/apps/lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap-ldap
  namespace: lldap
  labels:
    app.kubernetes.io/name: lldap
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: lldap
  ports:
    - name: ldap
      port: 3890
      targetPort: 3890
---
apiVersion: v1
kind: Service
metadata:
  name: lldap-ui
  namespace: lldap
  labels:
    app.kubernetes.io/name: lldap
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: lldap
  ports:
    - name: http
      port: 17170
      targetPort: 17170
