clusters/default/infra/apps/lldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap-ingress
  namespace: lldap
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: |
      kube-system-infra-security-headers@kubernetescrd
  labels:
    app.kubernetes.io/name: lldap
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
spec:
  ingressClassName: traefik
  rules:
    - host: lldap.kudofools.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap-ui
                port:
                  number: 17170
